# UPowerDBus

./: .gitmodules  CMakeLists.txt  UPower.qbs  UPowerProject.qbs
UPower/: QDBusFreedesktopInterface.cpp  QDBusFreedesktopInterface.h  QDBusFreedesktopInterfaceManager.cpp  QDBusFreedesktopInterfaceManager.h  QDBusFreedesktopProperty.cpp  QDBusFreedesktopProperty.h  UPower.qbs  UPowerDevice.cpp  UPowerDevice.h  UPowerDeviceManager.cpp  UPowerDeviceManager.h  generate_classes.sh  upower.xml
UPowerTestApp/: UPowerTestApp.qbs  main.cpp
include/: UPowerDevice.h  UPowerDeviceManager.h
src/: UPowerDevice.cpp  UPowerDeviceManager.cpp
